@@ -123,3 +123,13 @@ pub fn printer(rx: Receiver<PrinterMessage>, total_num_of_metatiles: Option<usiz
     let duration = duration_to_float_secs(&start.elapsed());
     println!("\nFinished. {} tiles ({} metatiles), done in {} ({:>9} metatiles/sec, {:>9} tiles/sec)", num_tiles_done.separated_string(), num_metatiles_done.separated_string(), fmt_duration(start.elapsed().as_secs()), fmt_rate((num_metatiles_done as f64)/duration), fmt_rate((num_tiles_done as f64)/duration) );
 }
+
+
+pub fn quiet_printer(rx: Receiver<PrinterMessage>, _: Option<usize>) {
+    for msg in rx.iter() {
+        if let PrinterMessage::Quit = msg {
+            break;
+        }
+    }
+}
+
