@@ -1,3 +1,7 @@
+== Unreleased
+
+ * `--quiet` to not print any messages while generating
+
 == v0.8.0 (2018-05-10)
 
 === Bug Fixes
